<resources>
    <string name="app_name">EliasUndKyAnh</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="journal">Journal</string>
    <string name="calendar">Calendar</string>
    <string name="clarity_hub_menu"><![CDATA[Clarity Hub/> </menu>]]></string>
    <string name="clarity_hub">Clarity Hub</string>
    <string name="ClarityHubFragment">Calendar</string>
    <string name="calendarFragment">CalendarFragment\n</string>
    <string name="Journal">Journal</string>
    <string name="to_do">To-DO</string>
    <string name="add_todo">Aufgabe hinzufügen</string>
    <string name="Clarity_Hub">Clarity Hub\n</string>
    <string name="kategorie">Kategorie</string>
    <string name="wichtigkeit">Wichtigkeit</string>
    <string name="titel">Titel</string>
    <string name="aufgabe_hinzuf_gen">Aufgabe hinzufügen</string>
    <string name="zeit_w_hlen">Zeit wählen</string>
    <string name="datum_w_hlen">Datum wählen</string>
    <string name="beschreibung">Beschreibung</string>
</resources>